<resources>
    <string name="app_name">Team_SAN</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="marital_status">Marital Status</string>
    <string name="language_known">Language Known</string>
    <string name="native_location">Native Location</string>
    <string name="next">Next</string>
    <string name="new_user_register"><u>Don\'t have an account? Sign up now.</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="recruiter">Recruiter</string>
</resources>
