<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Job Seeker "
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="#FAD7A0"
        android:layout_marginTop="20dp"
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:drawablePadding="10dp"
        android:maxLines="1"
        android:maxLength="10"

        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/etpassword"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:backgroundTint="#FAD7A0"
        android:maxLines="1"
        android:hint="@string/password"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_mail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/etConfirmpassword"
        android:layout_below="@id/etpassword"
        android:inputType="textPassword"
        android:backgroundTint="#FAD7A0"
        android:maxLines="1"
        android:hint="@string/confirm_password"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_mail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnLogin"
        android:layout_below="@id/etConfirmpassword"

        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#ffffff"/>




</RelativeLayout>